# bucky-p2p

./: .gitignore  AGENTS.md  Cargo.toml  test-run.bat  test-run.sh
bucky-rustls/: Cargo.toml
bucky-rustls/src/: aead.rs  client_cert_verifier.rs  lib.rs  server_cert_resolver.rs  server_cert_verifier.rs  sign.rs
cyfs-p2p/: Cargo.toml
cyfs-p2p-test/: Cargo.toml
cyfs-p2p-test/src/: main.rs
cyfs-p2p/examples/: cyfs_iperf3.rs  cyfs_perf.rs  quinn_perf.rs  tcp_iperf3.rs  tcp_perf.rs
cyfs-p2p/src/: error.rs  executor.rs  lib.rs  stack.rs  stack_builder.rs  types.rs
cyfs-p2p/src/dht/: node.rs  node_v2.rs
cyfs-p2p/src/executor/: async_std_executor.rs  mod.rs  tokio_executor.rs
cyfs-p2p/src/finder/: device_cache.rs  outer_device_cache.rs
cyfs-p2p/src/history/: keystore.rs
cyfs-p2p/src/pn/client/: manager.rs
cyfs-p2p/src/pn/service/: command.rs  events.rs  proxy.rs  service.rs
cyfs-p2p/src/protocol/: common.rs  mod.rs  package.rs  package_box.rs  sn.rs  v0.rs
cyfs-p2p/src/receive_processor/: mod.rs  receive_processor.rs  resp_sender.rs
cyfs-p2p/src/runtime/: async_std.rs  mod.rs  tokio.rs
cyfs-p2p/src/sn/: types.rs
cyfs-p2p/src/sn/client/: cache.rs  contract.rs  manager.rs  mod.rs  sn_client.rs  sn_service.rs
cyfs-p2p/src/sn/client/call/: client.rs  tcp.rs  udp.rs
cyfs-p2p/src/sn/client/ping/: client.rs  clients.rs  udp.rs
cyfs-p2p/src/sn/service/: call_stub.rs  mod.rs  net_listener.rs  peer_connection.rs  peer_manager.rs  receipt.rs  resend_queue.rs  service.rs
cyfs-p2p/src/sn/service/statistic/: manager.rs  mod.rs
cyfs-p2p/src/sn/service/storage/: mod.rs  sqlite_storage.rs
cyfs-p2p/src/sockets/: data_sender.rs  get_if_addrs.rs  mod.rs  net_listener.rs  net_manager.rs  net_util.rs  resp_sender.rs  tcp_data_sender.rs  types.rs  udp_data_sender.rs
cyfs-p2p/src/sockets/quic/: bucky_crypto.rs  listener.rs  mod.rs  quic_socket.rs
cyfs-p2p/src/sockets/tcp/: listener.rs  mod.rs  tcp_socket.rs
cyfs-p2p/src/sockets/udp/: listener.rs  mod.rs  udp_socket.rs
cyfs-p2p/src/stream/: mod.rs  stream.rs  stream_manager.rs  tcp_stream.rs  udp_stream.rs
cyfs-p2p/src/tunnel/: mod.rs  quic_tunnel_connection.rs  tcp_tunnel_connection.rs  tunnel.rs  tunnel_connection.rs  tunnel_manager.rs  udp_tunnel_connection.rs
desc-tool/: Cargo.toml  build.rs
desc-tool/src/: create.rs  desc.rs  lib.rs  main.rs  modify.rs  show.rs  sign.rs  util.rs
docs/architecture/: principles.md  sn-distributed-directory.md  validation-model.md  workspace-constraints.md
docs/modules/: cyfs-p2p-test.md  cyfs-p2p.md  desc-tool.md  p2p-frame.md  sn-miner.md
harness/: claude-settings-hooks.example.json  pipeline-plan.md  quality-gates.yaml  workspace-governance.yaml
harness/checklists/: design-approval-checklist.md  module-acceptance-checklist.md  proposal-approval-checklist.md  testing-approval-checklist.md
harness/ci/: harness-checks.yml
p2p-frame/: Cargo.toml
p2p-frame/docs/: pn_design.md  quic_tunnel_design.md  sn_design.md  tcp_tunnel_protocol_design.md  ttp_module_design.md  tunnel_command_protocol_design.md  tunnel_design.md
p2p-frame/src/: endpoint.rs  error.rs  lib.rs  p2p_connection.rs  p2p_identity.rs  p2p_network.rs  stack.rs  types.rs  x509.rs
p2p-frame/src/datagram/: datagram.rs  datagram_manager.rs  mod.rs
p2p-frame/src/dht/: node.rs
p2p-frame/src/executor/: async_std_executor.rs  mod.rs  tokio_executor.rs
p2p-frame/src/finder/: device_cache.rs  mod.rs  outer_device_cache.rs
p2p-frame/src/history/: keystore.rs
p2p-frame/src/networks/: command.rs  control_stream.rs  listener.rs  mod.rs  net_manager.rs  network.rs  tunnel.rs  validator.rs
p2p-frame/src/networks/quic/: listener.rs  mod.rs  network.rs  tunnel.rs
p2p-frame/src/networks/tcp/: connection.rs  listener.rs  mod.rs  network.rs  protocol.rs  tunnel.rs
p2p-frame/src/pn/: mod.rs  protocol.rs
p2p-frame/src/pn/client/: mod.rs  pn_client.rs  pn_listener.rs  pn_tunnel.rs
p2p-frame/src/pn/service/: mod.rs  pn_server.rs
p2p-frame/src/protocol/: common.rs  mod.rs  sn.rs  v0.rs
p2p-frame/src/receive_processor/: receive_processor.rs  resp_sender.rs
p2p-frame/src/runtime/: async_std.rs  mod.rs  tokio.rs
p2p-frame/src/sn/: mod.rs  tests.rs  types.rs
p2p-frame/src/sn/client/: contract.rs  manager.rs  mod.rs  sn_service.rs
p2p-frame/src/sn/client/call/: client.rs  udp.rs
p2p-frame/src/sn/client/ping/: client.rs  clients.rs  udp.rs
p2p-frame/src/sn/directory/: client.rs  control_plane.rs  election.rs  local.rs  membership.rs  mod.rs  route.rs  server.rs  store.rs
p2p-frame/src/sn/inter_sn/: mod.rs
p2p-frame/src/sn/protocol/: common.rs  mod.rs  sn.rs  v0.rs
p2p-frame/src/sn/service/: call_stub.rs  mod.rs  net_listener.rs  peer_connection.rs  peer_manager.rs  receipt.rs  resend_queue.rs  service.rs
p2p-frame/src/sn/service/statistic/: manager.rs  mod.rs
p2p-frame/src/sn/service/storage/: mod.rs  sqlite_storage.rs
p2p-frame/src/sockets/: get_if_addrs.rs  mod.rs  net_listener.rs  net_manager.rs  net_util.rs  types.rs
p2p-frame/src/sockets/quic/: listener.rs  mod.rs  quic_connection.rs  quic_factory.rs  quic_network.rs  quic_socket.rs
p2p-frame/src/sockets/tcp/: listener.rs  mod.rs  tcp_connection.rs  tcp_factory.rs  tcp_network.rs  tcp_socket.rs
p2p-frame/src/sockets/udp/: udp_socket.rs
p2p-frame/src/stream/: stream.rs  stream_manager.rs
p2p-frame/src/tls/: aead.rs  client_cert_verifier.rs  mod.rs  server_cert_resolver.rs  server_cert_verifier.rs  sign.rs
p2p-frame/src/ttp/: client.rs  listener.rs  mod.rs  node.rs  registry.rs  runtime.rs  server.rs  tests.rs  types.rs
p2p-frame/src/tunnel/: connection_info.rs  device_finder.rs  mod.rs  proxy_connection.rs  quic_tunnel_connection.rs  tcp_tunnel_connection.rs  tunnel.rs  tunnel_connection.rs  tunnel_listener.rs  tunnel_manager.rs
p2p-frame/src/x509/: ed25519.rs
p2p-frame/tests/sn_command_matrix/: five_by_five_command_matrix_tests.rs
pn-miner/: Cargo.toml
pn-miner/src/: main.rs
pn-miner/src/auth/: interface.rs  storage.rs
sn-miner-rust/: Cargo.toml
sn-miner-rust/src/: main.rs
(+277 files in other folders)
