[package]
name = "bucky-rustls"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["std"] }
hmac = "0.12.1"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
rand_core = "0.6.4"
x25519-dalek = "2"
bucky-crypto = { git = "https://github.com/buckyos/bucky-crypto.git" }
bucky-error = {git = "https://github.com/buckyos/bucky-error.git", features = ["rsa"]}
bucky-raw-codec = {git="https://github.com/buckyos/bucky-raw-codec.git", branch="main", features = ["derive"]}
bucky-objects = {git = "https://github.com/buckyos/bucky-objects.git"}
