[package]
name = "cyfs-p2p-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"]}
clap = "2"
cyfs-p2p = { path = "../cyfs-p2p" }
p2p-frame = { path = "../p2p-frame"}
serde = { version = "1.0.217", features = ["derive"] }
bucky-objects = {version = "0.1"}
bucky-crypto = {version = "0.1"}
bucky-raw-codec = {version = "0.1", features = ["derive"]}
log = "0.4.22"
toml = "0.8.19"
sfo-log = "0.1.3"
async-trait = "0.1"
