[package]
name = "cyfs-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = '1.12', features = ['unstable', 'attributes'] }
cyfs-base = "0.6.12"
cyfs-debug = "0.6.6"
cyfs-util = "0.6.8"
async-trait = "0.1.74"
log = "0.4.20"
futures = { version = '0.3', features = ['default', 'thread-pool'] }
rand = "0.7.3"
winapi = "0.3.9"
socket2 = "0.5.5"
once_cell = "1.19.0"
sha2 = "0.8.2"
md5 = "0.7.0"
mini-moka = "0.10.3"
callback-trait = "0.1.3"
callback-result = "0.1.3"
aes = "0.8.4"
block-modes = "0.9.1"
async-channel = "2.2.0"
notify-future = "0.1.4"
sfo-result = { version = "0.2.4", features = ["backtrace", "log"] }
as-any = "0.3.1"
num-traits = "0.2"
num-derive = "0.3"

[target.'cfg(unix)'.dependencies]
nix = '0.24'
