[package]
name = "cyfs-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bucky-raw-codec = {git="https://github.com/buckyos/bucky-raw-codec.git", branch="main", features = ["derive"]}
bucky-error = {git = "https://github.com/buckyos/bucky-error.git", features = ["rusqlite"]}
bucky-crypto = {git = "https://github.com/buckyos/bucky-crypto.git"}
bucky-time = {git = "https://github.com/buckyos/bucky-time.git"}
bucky-objects = {git = "https://github.com/buckyos/bucky-objects.git"}
bucky-rustls = { path = "../bucky-rustls" }

async-std = { version = '1.12', features = ['unstable', 'attributes'], optional = true }
futures-rustls = { version = "0.26", default-features = false, optional = true }
tokio = { version = "1.37.0", optional = true}
tokio-rustls = {  version = "0.26.0", default-features = false, optional = true }
async-trait = "0.1.74"
log = "0.4.20"
futures = { version = '0.3', features = ['default', 'thread-pool'] }
rand = "0.7.3"
winapi = { version = "0.3.9", features = ["winsock2", "mswsock", "ws2def"] }
socket2 = "0.5.5"
once_cell = "1.19.0"
sha2 = "0.8.2"
md5 = "0.7.0"
mini-moka = "0.10.3"
callback-trait = "0.1.3"
callback-result = "0.1.3"
aes = "0.8.4"
block-modes = "0.9.1"
async-channel = "2.2.0"
notify-future = "0.1.4"
sfo-result = { version = "0.2.4", features = ["backtrace", "log"] }
as-any = "0.3.1"
num-traits = "0.2"
num-derive = "0.3"
quinn = { version = "0.11", default-features = false, features = ["log", "platform-verifier", "rustls", "ring"] }
#quinn-proto = { version = "0.11", default-features = false, features = ["log"] }
rustls = { version = "0.23.5", default-features = false, features = ["ring", "std"] }
x509-cert = { version = "0.2.5", features = ["builder"] }
libc = '0.2'
c_linked_list = '1.1.1'
rusqlite = { version = '0.30.0', features = ['bundled', 'blob'] }

[target.'cfg(unix)'.dependencies]
nix = '0.24'

[features]
default = ["runtime-tokio"]
runtime-tokio = ["quinn/runtime-tokio", "tokio/time", "tokio/rt", "tokio/net", "tokio/io-std", "tokio/io-util", "tokio-rustls"]
runtime-async-std = ["quinn/runtime-async-std", "async-std", "futures-rustls"]
