[package]
name = "cyfs-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bucky-raw-codec = {git="https://github.com/buckyos/bucky-raw-codec.git", features = ["derive"]}
bucky-error = {git = "https://github.com/buckyos/bucky-error.git", features = ["rusqlite"]}
bucky-crypto = {git = "https://github.com/buckyos/bucky-crypto.git"}
bucky-time = {git = "https://github.com/buckyos/bucky-time.git"}
bucky-objects = {git = "https://github.com/buckyos/bucky-objects.git"}
p2p-frame = { path = "../p2p-frame" }

async-std = { version = "1.13", features = ['unstable', 'attributes'], optional = true }
futures-rustls = { version = "0.26", default-features = false, optional = true }
tokio = { version = "1.43.0", optional = true}
tokio-rustls = {  version = "0.26.1", default-features = false, optional = true }
log = "0.4.22"
async-trait = "0.1.87"
futures = { version = '0.3', features = ['default', 'thread-pool'] }
rand = "0.7.3"
sha2 = "0.8.2"
sfo-result = { version = "0.2.4", features = ["backtrace", "log"] }

[target.'cfg(unix)'.dependencies]
nix = '0.24'

[features]
default = ["runtime-tokio"]
runtime-tokio = ["p2p-frame/runtime-tokio", "tokio/time", "tokio/rt", "tokio/net", "tokio/macros", "tokio/io-std", "tokio/io-util", "tokio-rustls"]
#runtime-async-std = ["p2p-frame/runtime-async-std", "async-std", "futures-rustls"]
