[package]
name = "desc-tool"
version = "0.5.0"
authors = ["swjtusw <swjtusw@126.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Rust desc-tool package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bucky-raw-codec = {git="https://github.com/buckyos/bucky-raw-codec.git", features = ["derive"]}
bucky-error = {git = "https://github.com/buckyos/bucky-error.git"}
bucky-crypto = {git = "https://github.com/buckyos/bucky-crypto.git"}
bucky-time = {git = "https://github.com/buckyos/bucky-time.git"}
bucky-objects = {git = "https://github.com/buckyos/bucky-objects.git"}
tokio = { version = "1.39.2", features = ["full"]}
serde_json = "1.0"
clap = "2.34.0"
hex = "0.4"
log = "0.4"
simple_logger = "2.1"
chrono = "0.4"
itertools = '0.10'
num_cpus = "1.16.0"
