[package]
name = "desc-tool"
version = "0.5.0"
authors = ["swjtusw <swjtusw@126.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Rust desc-tool package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bucky-raw-codec = { version = "0.1", features = ["derive"] }
bucky-error = "0.1"
bucky-crypto = "0.1"
bucky-time = "0.1"
bucky-objects = "0.1"
tokio = { version = "1.43.0", features = ["full"]}
serde_json = "1.0"
clap = "2.34.0"
hex = "0.4"
log = "0.4"
simple_logger = "2.3"
chrono = "0.4"
itertools = '0.10'
num_cpus = "1.16.0"
