[package]
name = "p2p-frame"
version = "0.1.0"
edition = "2021"

[dependencies]
bucky-raw-codec = {git="https://github.com/buckyos/bucky-raw-codec.git", features = ["derive"]}
bucky-time = {git = "https://github.com/buckyos/bucky-time.git"}

async-std = { version = '1.12', features = ['unstable', 'attributes'], optional = true }
futures-rustls = { version = "0.26", default-features = false, optional = true }
tokio = { version = "1.41.0", optional = true}
tokio-rustls = {  version = "0.26.0", default-features = false, optional = true }
async-trait = "0.1.74"
log = "0.4.20"
futures = { version = '0.3', features = ['default', 'thread-pool'] }
rand = "0.7.3"
winapi = { version = "0.3.9", features = ["winsock2", "mswsock", "ws2def"] }
once_cell = "1.19.0"
sha2 = "0.10.8"
mini-moka = "0.10.3"
callback-trait = "0.1.3"
callback-result = "0.1.3"
aes = "0.8.4"
notify-future = "0.1.4"
sfo-result = { version = "0.2.4", features = ["backtrace", "log"] }
as-any = "0.3.1"
num-traits = "0.2"
num-derive = "0.3"
quinn = { version = "0.11", default-features = false, features = ["log", "platform-verifier", "rustls", "ring"] }
#quinn-proto = { version = "0.11", default-features = false, features = ["log"] }
rustls = { version = "0.23.5", default-features = false, features = ["ring", "std"] }
libc = '0.2'
c_linked_list = '1.1.1'
rusqlite = { version = '0.30.0', features = ['bundled', 'blob'] }
if-addrs = { version = "0.13.1" }

hmac = "0.12.1"
aes-gcm = "0.10.3"
rand_core = "0.6.4"
x25519-dalek = "2"
base-x = "0.2.11"

[target.'cfg(unix)'.dependencies]
nix = '0.24'

[features]
default = ["runtime-tokio"]
runtime-tokio = ["quinn/runtime-tokio", "tokio/time", "tokio/rt", "tokio/net", "tokio/macros", "tokio/io-std", "tokio/io-util", "tokio/rt-multi-thread", "tokio-rustls"]
runtime-async-std = ["quinn/runtime-async-std", "async-std", "futures-rustls"]
