[package]
name = "p2p-frame"
version = "0.1.0"
edition = "2024"

[dependencies]
bucky-raw-codec = {git="https://github.com/buckyos/bucky-raw-codec.git", features = ["derive"]}
bucky-time = {git = "https://github.com/buckyos/bucky-time.git"}

async-std = { version = "1.13", features = ['unstable', 'attributes'], optional = true }
futures-rustls = { version = "0.26", default-features = false, optional = true }
tokio = { version = "1.43.0", optional = true}
tokio-rustls = {  version = "0.26.1", default-features = false, optional = true }
async-trait = "0.1.85"
log = "0.4.22"
futures = { version = '0.3', features = ['default', 'thread-pool'] }
rand = "0.7.3"
winapi = { version = "0.3.9", features = ["winsock2", "mswsock", "ws2def", "ws2ipdef"] }
once_cell = "1.20.2"
sha2 = "0.10.8"
mini-moka = "0.10.3"
callback-trait = "0.1.3"
callback-result = "0.2.2"
aes = "0.8.4"
notify-future = "0.2.2"
sfo-result = { version = "0.2.6", features = ["backtrace"] }
as-any = "0.3.1"
num-traits = "0.2"
num-derive = "0.4"
quinn = { version = "0.11", default-features = false, features = ["platform-verifier", "rustls", "ring"] }
#quinn-proto = { version = "0.11", default-features = false, features = ["log"] }
rustls = { version = "0.23.20", default-features = false, features = ["ring", "std"] }
libc = '0.2'
c_linked_list = '1.1.1'
rusqlite = { version = '0.30.0', features = ['bundled', 'blob'] }
if-addrs = { version = "0.13.3" }
async-named-locker = "0.1.2"
sfo-cmd-server = { git = "https://github.com/wugren/sfo-cmd-server.git" }
sfo-split = "0.1.2"

hmac = "0.12.1"
aes-gcm = "0.10.3"
rand_core = "0.6.4"
x25519-dalek = "2"
base-x = "0.2.11"
hex = "0.4.3"
base58 = "0.2.0"

[target.'cfg(unix)'.dependencies]
nix = '0.24'

[features]
default = ["runtime-tokio"]
runtime-tokio = ["quinn/runtime-tokio", "tokio/time", "tokio/rt", "tokio/net", "tokio/macros", "tokio/io-std", "tokio/io-util", "tokio/rt-multi-thread", "tokio-rustls"]
runtime-async-std = ["quinn/runtime-async-std", "async-std", "futures-rustls"]
