[package]
name = "pn-miner"
version = "0.5.0"
authors = ["zhangzhen <zhangzhen@buckyos.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Rust pn-miner package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "0.4"
async-std = "1.11"
async-trait = "0.1.53"
cyfs-base = "0.6.12"
cyfs-debug = "0.6.6"
cyfs-util = "0.6.8"
cyfs-p2p = { path = "../cyfs-p2p" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.27.0"
tide = "0.16"
clap = "2.34.0"
