[package]
name = "pn-miner"
version = "0.5.0"
authors = ["zhangzhen <zhangzhen@buckyos.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Rust pn-miner package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "0.4"
async-std = "1.13"
async-trait = "0.1.85"
cyfs-p2p = { path = "../cyfs-p2p" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.30.0"
tide = "0.16"
clap = "2.34.0"
bucky-objects = {git = "https://github.com/buckyos/bucky-objects.git"}
bucky-crypto = {git = "https://github.com/buckyos/bucky-crypto.git"}
bucky-error = {git = "https://github.com/buckyos/bucky-error.git"}
