[package]
name = "sn-miner"
version = "0.5.0"
authors = ["zhangzhen <zhangzhen@buckyos.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Rust sn-miner package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"]}
cyfs-p2p = { path = "../cyfs-p2p" }
clap = "2"
sfo-result = { version = "0.2.4", features = ["backtrace", "log"] }
bucky-objects = {version = "0.1"}
bucky-crypto = {version = "0.1"}
bucky-raw-codec = {version = "0.1", features = ["derive"]}
sfo-log = "0.1.3"
